; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_LruInsert.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_LruInsert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32 }

@LOG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"LruInsert %d (%s)\00", align 1
@VfdCache = common dso_local global %struct.TYPE_3__* null, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"re-open failed: %m\00", align 1
@nfile = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @LruInsert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LruInsert(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @Assert(i32 %7)
  %9 = load i32, i32* @LOG, align 4
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** @VfdCache, align 8
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 8
  %16 = call i32 (i32, i8*, ...) @elog(i32 %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %10, i32 %15)
  %17 = call i32 @DO_DB(i32 %16)
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @VfdCache, align 8
  %19 = load i64, i64* %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %19
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %4, align 8
  %21 = load i64, i64* %3, align 8
  %22 = call i64 @FileIsNotOpen(i64 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %50

24:                                               ; preds = %1
  %25 = call i32 (...) @ReleaseLruFiles()
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = call i64 @BasicOpenFilePerm(i32 %28, i32 %31, i32 %34)
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  store i64 %35, i64* %37, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp slt i64 %40, 0
  br i1 %41, label %42, label %46

42:                                               ; preds = %24
  %43 = load i32, i32* @LOG, align 4
  %44 = call i32 (i32, i8*, ...) @elog(i32 %43, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %45 = call i32 @DO_DB(i32 %44)
  store i32 -1, i32* %2, align 4
  br label %53

46:                                               ; preds = %24
  %47 = load i32, i32* @nfile, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* @nfile, align 4
  br label %49

49:                                               ; preds = %46
  br label %50

50:                                               ; preds = %49, %1
  %51 = load i64, i64* %3, align 8
  %52 = call i32 @Insert(i64 %51)
  store i32 0, i32* %2, align 4
  br label %53

53:                                               ; preds = %50, %42
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @DO_DB(i32) #1

declare dso_local i32 @elog(i32, i8*, ...) #1

declare dso_local i64 @FileIsNotOpen(i64) #1

declare dso_local i32 @ReleaseLruFiles(...) #1

declare dso_local i64 @BasicOpenFilePerm(i32, i32, i32) #1

declare dso_local i32 @Insert(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
